
New: FreeBSD, OpenBSD, NetBSD, DragonflyBSD MacOS: Added CPU nice and interrupt usage statistics.

New: Issue #877: Linux: Add support for VxFS filesystem statistics. Thanks to Lutz Mader for patch.

New: Enable support for compilation with AddressSanitizer. Use "configure --with-asan" to enable.

New: Issue #894: If monit is logging to a file: add a year to the timestamp.

Fixed: Issue #867: Monit crashed when executing programs when linked with musl libc. Thanks to Rich Felker for report.

Fixed: Monit did incorrectly add the CPU wait% to the system CPU usage, which was wrong (the CPU is idle when it's in the
"wait" state, waiting for the I/O to complete).

Fixed: The per-process I/O statistics on Linux, AIX, DragonflyBSD, NetBSD, Solaris (displayed always 0 activity).

Fixed: Issue #843: Linux: Wrong memory usage reported in LXC container when ZFS filesystem is used. Monit
now uses MemAvailable on Linux when calculating the memory usage, so it will provide more accurate statistics.
Thanks to Joe LeVeque for patch.

Fixed: Issue #831: The HTTP protocol test returned "unknown transfer encoding HTTP error" in the case that
the response content or checksum test was used and the HTTP server didn't set the Content-Length nor used a
chunked encoding for response.

Fixed: Issue #880: If monit is linked with AddresSanitizer, it may crash when it generates an MD5 hash.
Thanks to Lutz Mader for patch.

Fixed: Issue #879: The HTML interface didn't escape strings that are part of monit configuration file.
Thanks to Hanno Boeck for report.

Fixed: Issue #872: Procmatch PID column show five digits only

Fixed: Issue #891: The action's "repeat" option was limited to 256 cycles.

Fixed: Issue #851: Linux and AIX: The length of the string that describes the process name and its arguments
was limited to 4kB, so the "procmatch" may not find the process if the pattern is past this limit. The limit
was removed on Linux. On AIX the limit was rised to 8kB.
